--- a/package.json
+++ b/package.json
@@ -13,6 +13,10 @@
     "@types/react-redux": "^7.1.9",
     "@types/react-router-dom": "^5.1.6",
     "@types/redux-logger": "^3.0.8",
+    "@types/styletron-engine-atomic": "^1.1.0",
+    "@types/styletron-react": "^5.0.2",
+    "@types/styletron-standard": "^2.0.1",
+    "baseui": "^9.102.0",
     "connected-react-router": "^6.8.0",
     "history": "^5.0.0",
     "react": "^16.13.1",
@@ -23,6 +27,8 @@
     "redux": "^4.0.5",
     "redux-logger": "^3.0.6",
     "reselect": "^4.0.0",
+    "styletron-engine-atomic": "^1.4.6",
+    "styletron-react": "^5.2.7",
     "typescript": "~3.7.2"
   },
   "scripts": {
